--- a/FlexBlog/css/style.css
+++ b/FlexBlog/css/style.css
@@ -354,7 +354,7 @@ img{
 }
 
 .newsletter-info{
-  flex:1 1 260px;
+  flex:1 1 240px;
   margin:0 10px;
 }
 
@@ -366,5 +366,64 @@ img{
 .newsletter-info p{
   font-size:1.25em;
   font-style:italic;
-  max-width:200px;
+  max-width:230px;
+  color:#7c7c7c;
+  margin-bottom:10px;
+}
+
+.newsletter-form{
+  flex:2 1 260px;
+  margin:0 10px;
+  align-self:center;
+  display:flex;
+  flex-wrap:wrap;
+}
+
+.newsletter-form input{
+  flex:3 1 260px;
+  font-size:1.25em;
+  color:#7c7c7c;
+  font-style:italic;
+  border:4px solid #2c70ff;
+  background:transparent;
+  padding:15px 10px;
+  margin:0px;
+  border-radius:0px;
+
+}
+
+.newsletter-form button{
+  flex:1 1 260px;
+  font-size:2.25em;
+  font-weight:bold;
+  text-transform:uppercase;
+  background:#2c70ff;
+  color:white;
+  margin:0px;
+  cursor:pointer;
+  border:0px;
+  padding:15px 10px;
+}
+
+@media (max-width:600px){
+  .newsletter-form button{
+    font-size:1.5em;
+  }
+}
+
+/* FOOTER */
+
+.footer{
+  display:flex;
+  background:#2c70ff;
+  height:200px;
+  align-items:center;
+
+}
+
+.footer p{
+  flex:1;
+  text-align:center;
+  font-size:2.25em;
+  color:#122ab2
 }
